basic html css js build

--- a/guessGame.html
+++ b/guessGame.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Guessing color</title>
+    <link rel="stylesheet" type="text/css" href="guessGame.css">
 </head>
 <body>
+<h1>the great <span id="colorDisplay">RGB</span> guessing game</h1>
+    <h2>
+        <div ></div>
+        <div></div>
+    </h2>
+    <div id="container">
+        <div class="square" id="btn1"></div>
+        <div class="square" id="btn2"></div>
+        <div class="square" id="btn3"></div>
+        <div class="square" id="btn4"></div>
+        <div class="square" id="btn5"></div>
+        <div class="square" id="btn6"></div>
 
+    </div>
+<script type="text/javascript" src="guessGame.js"></script>
 </body>
 </html>
