add functions to generate and change colors

--- a/guessGame.html
+++ b/guessGame.html
@@ -7,10 +7,9 @@
 </head>
 <body>
 <h1>the great <span id="colorDisplay">RGB</span> guessing game</h1>
-    <h2>
-        <div ></div>
-        <div></div>
-    </h2>
+    <div>
+        <span id ="message"></span>
+    </div>
     <div id="container">
         <div class="square" id="btn1"></div>
         <div class="square" id="btn2"></div>
