add reset button

--- a/guessGame.html
+++ b/guessGame.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <h1>the great <span id="colorDisplay">RGB</span> guessing game</h1>
-    <div>
+    <div id="stripe">
+        <button id="reset">New game</button>
         <span id ="message"></span>
     </div>
     <div id="container">
