--- a/guessGame.html
+++ b/guessGame.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" type="text/css" href="guessGame.css">
 </head>
 <body>
-<h1>the great <span id="colorDisplay">RGB</span> guessing game</h1>
+<h1>the great <br><span id="colorDisplay">RGB</span><br> guessing game</h1>
     <div id="stripe">
         <button id="reset">New game</button>
         <span id ="message"></span>
+        <button id="easyBtn">Easy</button>
+        <button id="hardBtn">Hard</button>
     </div>
     <div id="container">
         <div class="square" id="btn1"></div>
